<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.intcore_demo.login.viewmodel.LogInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_password"
            style="@style/viewAppearance"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_8"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone" />

        <EditText
            android:id="@+id/et_phone"
            style="@style/viewAppearance"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_8"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <EditText
            android:id="@+id/et_re_password"
            style="@style/viewAppearance"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_8"
            android:ems="10"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <EditText
            android:id="@+id/et_email"
            style="@style/viewAppearance"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_8"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/et_name"
            style="@style/viewAppearance"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_8"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:fontFamily="@font/audiowide"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_re_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>