<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


        <variable
            name="viewModel"
            type="com.example.intcore_demo.login.viewmodel.LogInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <EditText

            android:id="@+id/et_email"
            style="@style/viewAppearance"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginEnd="@dimen/dp_8"
            android:ems="10"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email_or_phone_number"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/et_password"
            style="@style/viewAppearance"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="@+id/et_email"
            app:layout_constraintStart_toStartOf="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:fontFamily="@font/audiowide"
            android:text="@string/log_in"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_logIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:text="@string/log_in"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="@dimen/dp_32"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_50"
            android:text="@string/create_an_account"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_signup"
            app:layout_constraintEnd_toStartOf="@+id/btn_signup"
            app:layout_constraintTop_toTopOf="@+id/btn_signup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>