<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.intcore_demo.profile.viewmodel.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{safeUnbox(viewModel.dataLoading) ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <include
            android:id="@+id/layout_no_network"
            layout="@layout/layout_no_internet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="@{()->viewModel.getProfile()}"
            android:visibility="@{safeUnbox(viewModel.showNoNetworkScreenEvent) ? View.VISIBLE : View.GONE}"
            tools:visibility="gone" />

        <include
            android:id="@+id/include"
            layout="@layout/layout_toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:visibility="visible"
            android:visibility="@{safeUnbox(viewModel.showNoNetworkScreenEvent) ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include">

            <ImageView
                android:id="@+id/iv_image"
                imageUrl="@{viewModel.mutableImageLiveData}"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_150"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <EditText
                android:id="@+id/et_name"
                style="@style/viewAppearance"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_8"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:text="@{viewModel.mutableNameLiveData}"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_image" />

            <EditText
                android:id="@+id/et_email"
                style="@style/viewAppearance"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_8"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@{viewModel.mutableEmailLiveData}"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name" />

            <Button
                android:id="@+id/btn_chang_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/change_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.934"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_update_phone" />

            <Button
                android:id="@+id/btn_update_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:background="@color/colorPrimary"
                android:text="@string/update_profile"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/viewAppearance"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:text="@{viewModel.mutablePhoneLiveData}"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toStartOf="@+id/btn_update_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <Button
                android:id="@+id/btn_update_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/change_number_phone"
                app:layout_constraintBottom_toBottomOf="@+id/et_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_phone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>