<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.intcore_demo.profile.viewmodel.ProfileViewModel" />
    </data>

    <LinearLayout
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_250"
        android:layout_gravity="center"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_250"
            android:layout_gravity="center"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/btn_change_old_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:text="@string/change_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/et_old_password"
                style="@style/viewAppearance"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_8"
                android:ems="10"
                android:textColor="@color/colorWhite"
                android:hint="@string/old_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/et_new_password"
                style="@style/viewAppearance"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:textColor="@color/colorWhite"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_old_password" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/change_password"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>